# tf-aws-module_primitive-lambda_layer

./: .gitignore  README.md  go.mod  go.sum  main.tf  outputs.tf  variables.tf  versions.tf
.github/workflows/: pull-request-label.yml  pull-request-terraform-check.yml  release-publish.yml
examples/already_zipped/: README.md  main.tf  test.tfvars
examples/complete/: README.md  locals.tf  main.tf  outputs.tf  test.tfvars  variables.tf
examples/from_folder/: README.md  main.tf  test.tfvars  variables.tf  versions.tf
examples/from_folder/layer_contents/python/my_lib/: example.py
examples/pip_install_pyproject/: README.md  layer_folder_from_pyproject.sh  main.tf  test.tfvars  variables.tf  versions.tf
examples/pip_install_pyproject/python_project/: pyproject.toml
examples/pip_install_requirements/: README.md  layer_folder_from_requirements.sh  main.tf  test.tfvars  variables.tf  versions.tf
examples/pip_install_requirements/python_project/: entrypoint.py
scripts/: layer_folder_from_pyproject.sh  layer_folder_from_requirements.sh
tests/post_deploy_functional/: main_test.go
tests/post_deploy_functional_readonly/: main_test.go
tests/testimpl/: test_impl.go
