[project]
name = "example-project"
version = "1.0.0"
description = "An example project to demonstrate Terraform functionality"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = ["pytest~=7.0"]
